- (Windows) fix client area extending beyond titlebar (scaled displays)
- fix EGL support
- fix OSMesa support (image is flipped)
- add premake file
- test with zig
- fix osmesa on wasm
- fix keycodes for non-evdev X11 users
- prevent crash if GLX functions fail to load, plus add more optional functions for swapInterval to use 
- add gears example
- use direct software rendering (wasm) (no opengl) 

Release:    RGFW 1.6 (Feb 25, 2025)
-----------------------------------------------
This release has been focused on ensuring feature parity with GLFW, reviewing included features and fixing bugs. 

breaking changes:
- Replace `RGFW_window_setBufferPtr` and `RGFW_setBufferSize` with `RGFW_window_initBuffer`, `RGFW_window_initBufferSize` and `RGFW_window_initBufferPtr`
    Also forces the user to run `RGFW_window_initBuffer` to allocate a buffer
- add `vector` for raw mouse data (so `point` can be used to get the regular mouse point)
- RGFW_setGLHint and RGFW_glHints enum
- change RGFW_window_fullscreen to  RGFW_window_setFullscreen
- make RGFW_window_setFullscreen use exclusive fullscreen
- limit directX support to RGFW_window_createDXSwapChain, most of it should/can be handled by the user
- do not close the window until the (library) user closes it
- add RGFW_monitorMode, move monitor.rect to mode.area and x, y to monitor
- RGFW stalls on RGFW_quit

major changes:
- RGFW_monitorMode, allows gives the user more control the monitor's mode (size, refreshRate, RGB)
- lots of bug fixes
- more windowing functions and checking functions (floating, focus, aspectRatio, etc)
- RGFW_glHints and more OpenGL hint options (RGB, depth, robustness, release behavior, etc)
- more examples

all changes:
fixes:
- fix wasm key event bug (key release events not being processed)
- fix xDND data restarts bug 
- rewrite writeclipboard, ensure the selection is properly being handled and the clipboard is properly being saved after the window is closed