@@ -73,7 +73,10 @@ overwritten)
 - fix keycodes for non-evdev X11 users
 - prevent crash if GLX functions fail to load, plus add more optional functions for swapInterval to use 
 - add gears example
-- use direct software rendering (wasm) (no opengl) 
+- use direct software rendering (wasm) (no opengl)
+- fix GLX on Nvidia Drivers (By splitting Visual/Context creation again)
+- simplfy EGL context creation
+- fix bugs with detecting the monitor resolution (window)
 
 Release:    RGFW 1.6 (Feb 25, 2025)
 -----------------------------------------------
